syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme";
option java_outer_classname = "StockGrpcProto";

package stock;

service StockGrpc {
  rpc StreamStockPrices (StockRequest) returns (stream StockReply) {}
}

message StockRequest {
 repeated string symbol = 1;
}

message StockReply {
  string symbol = 1;
  double price = 2;
  int64 timestamp = 3;
}
